//
// Copyright Â© 2016 <code@io7m.com> http://io7m.com
//
// Permission to use, copy, modify, and/or distribute this software for any
// purpose with or without fee is hereby granted, provided that the above
// copyright notice and this permission notice appear in all copies.
//
// THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
// WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
// MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY
// SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
// WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
// ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR
// IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
//

syntax = "proto3";

package com.io7m.jcalcium.parser.protobuf3.v1;

message V1Translation
{
  double x = 1;
  double y = 2;
  double z = 3;
}

message V1Scale
{
  double x = 1;
  double y = 2;
  double z = 3;
}

message V1Quaternion
{
  double x = 1;
  double y = 2;
  double z = 3;
  double w = 4;
}

enum V1Interpolation
{
  V1_INTERPOLATION_LINEAR      = 0;
  V1_INTERPOLATION_EXPONENTIAL = 1;
  V1_INTERPOLATION_CONSTANT    = 2;
}

enum V1Easing
{
  V1_EASING_IN     = 0;
  V1_EASING_IN_OUT = 1;
  V1_EASING_OUT    = 2;
}

message V1CurveKeyframeScale
{
  uint32          index         = 1;
  V1Interpolation interpolation = 2;
  V1Easing        easing        = 3;
  V1Scale         scale         = 4;
}

message V1CurveKeyframeOrientation
{
  uint32          index         = 1;
  V1Interpolation interpolation = 2;
  V1Easing        easing        = 3;
  V1Quaternion    orientation   = 4;
}

message V1CurveKeyframeTranslation
{
  uint32          index         = 1;
  V1Interpolation interpolation = 2;
  V1Easing        easing        = 3;
  V1Translation   translation   = 4;
}

message V1CurveScale
{
  string                        bone      = 1;
  repeated V1CurveKeyframeScale keyframes = 2;
}

message V1CurveOrientation
{
  string                              bone      = 1;
  repeated V1CurveKeyframeOrientation keyframes = 2;
}

message V1CurveTranslation
{
  string                              bone      = 1;
  repeated V1CurveKeyframeTranslation keyframes = 2;
}

message V1Curve
{
  oneof curve {
    V1CurveScale       scale       = 1;
    V1CurveOrientation orientation = 2;
    V1CurveTranslation translation = 3;
  }
}

message V1Bone
{
  string        name        = 1;
  string        parent      = 2;
  V1Scale       scale       = 3;
  V1Quaternion  orientation = 4;
  V1Translation translation = 5;
}

message V1ActionCurves
{
  string           name              = 1;
  uint32           frames_per_second = 2;
  repeated V1Curve curves            = 3;
}

message V1Action
{
  oneof action {
    V1ActionCurves curves = 1;
  }
}

message V1Skeleton
{
  string            name    = 1;
  repeated V1Bone   bones   = 2;
  repeated V1Action actions = 3;
}
